Fix selector dialog visibility, add auto version bump and app icon
- Fix SelectorDialog not showing when launched as URL handler by creating
  a hidden owner frame for proper Windows window management
- Add auto minor version bump on push to main via GitHub Actions
- Add sailing boat icon (golden yellow on navy blue squircle)
- Update build pipeline to use pre-built ICO for Windows desktop icon
- Add SLF4J simple logger to silence SQLite warnings
- Fix getExecutablePath() to correctly find jpackage executable
- Update README with CI badges and release documentation